[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/backgrounds/uncolored_piramids.png" type="Texture2D" id=1]
[ext_resource path="res://sprites/controls/logo_murio_plain.png" type="Texture2D" id=2]
[ext_resource path="res://fonts/ Kind and Rich - Personal Use.otf" type="FontFile" id=3]
[ext_resource path="res://scenes/UI/main_settings_screen.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.364706, 0.560784, 0.803922, 1 )

[sub_resource type="FontFile" id=2]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="FontFile" id=4]
size = 44
font_data = ExtResource( 3 )

[node name="settings_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.921631
offset_top = -0.330261
offset_right = -0.921631
offset_bottom = -0.330322
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="uncolored_piramids" type="Sprite2D" parent="."]
position = Vector2( 1024, 600 )
scale = Vector2( 2.0018, 1.17252 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 0.323
anchor_bottom = 0.111
offset_left = -0.92041
offset_top = -0.332581
offset_right = 1385.58
offset_bottom = 596.467
use_top_left = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="logo_murio_plain" type="Sprite2D" parent="CenterContainer"]
position = Vector2( 1040.53, 382.689 )
scale = Vector2( 0.587764, 0.568827 )
texture = ExtResource( 2 )

[node name="left_options_panel" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -803.905
offset_top = -555.05
offset_right = -127.905
offset_bottom = -203.05
theme_override_constants/separation = 26
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_options_panel" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 96.5149
offset_top = -555.05
offset_right = 772.515
offset_bottom = -203.05
theme_override_constants/separation = 26
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_button" type="Button" parent="."]
offset_left = 1051.72
offset_top = 1034.47
offset_right = 1871.72
offset_bottom = 1094.47
custom_minimum_size = Vector2( 0, 44 )
pivot_offset = Vector2( 339.611, 22 )
theme_override_styles/normal = SubResource( 1 )
theme_override_fonts/font = SubResource( 2 )
text = "Save changes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="."]
offset_left = 149.0
offset_top = 1034.0
offset_right = 969.0
offset_bottom = 1094.0
custom_minimum_size = Vector2( 0, 44 )
pivot_offset = Vector2( 339.611, 22 )
theme_override_styles/hover = SubResource( 3 )
theme_override_styles/normal = SubResource( 1 )
theme_override_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restore_to_defaults_button" type="Button" parent="."]
offset_left = 626.736
offset_top = 1111.93
offset_right = 1426.74
offset_bottom = 1166.93
custom_minimum_size = Vector2( 0, 44 )
pivot_offset = Vector2( 339.611, 22 )
theme_override_styles/hover = SubResource( 3 )
theme_override_styles/normal = SubResource( 1 )
theme_override_fonts/font = SubResource( 2 )
text = "Restore to defaults"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version" type="Label" parent="."]
offset_left = 1886.84
offset_top = 1157.04
offset_right = 2069.84
offset_bottom = 1222.04
theme_override_fonts/font = SubResource( 4 )
text = "Version 0.01
"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="restore_to_defaults_button" to="." method="_on_restore_to_defaults_button_pressed"]
